2011-08-31  Adam Barth  <abarth@webkit.org>

        [Chromium] Rename WebKitClient to WebKitPlatformSupport
        https://bugs.webkit.org/show_bug.cgi?id=67309

        Reviewed by Darin Fisher.

        WebKitClient doesn't actually represent the WebKit Client.  Instead, it
        represents supporting code for the WebKit Platform.  This patch renames
        WebKitClient to WebKitPlatformSupport to make it easier for folks to
        understand the difference between the Client and the Platform.

        This patch includes shims so as not to break the Chromium build.  Once
        the Chromium side is updated, I'll remove the shims.

        * WebKit.gyp:
        * public/WebFrameClient.h:
        * public/WebKit.h:
        (WebKit::webKitClient):
        * public/WebKitClient.h: Removed.
        * public/WebKitPlatformSupport.h: Copied from Source/WebKit/chromium/public/WebKitClient.h.
        (WebKit::WebKitPlatformSupport::~WebKitPlatformSupport):
        * src/ApplicationCacheHostInternal.h:
        * src/AssociatedURLLoader.cpp:
        * src/AsyncFileSystemChromium.cpp:
        (WebCore::AsyncFileSystemChromium::AsyncFileSystemChromium):
        * src/AudioDestinationChromium.cpp:
        (WebCore::AudioDestinationChromium::AudioDestinationChromium):
        (WebCore::AudioDestination::hardwareSampleRate):
        * src/BlobRegistryProxy.cpp:
        (WebCore::BlobRegistryProxy::BlobRegistryProxy):
        * src/CCThreadImpl.cpp:
        (WebKit::CCThreadImpl::CCThreadImpl):
        * src/ChromiumCurrentTime.cpp:
        (WTF::currentTime):
        (WTF::monotonicallyIncreasingTime):
        * src/ChromiumOSRandomSource.cpp:
        (WTF::cryptographicallyRandomValuesFromOS):
        * src/ChromiumThreading.cpp:
        (WTF::ChromiumThreading::callOnMainThread):
        * src/FrameLoaderClientImpl.cpp:
        (WebKit::FrameLoaderClientImpl::canShowMIMEType):
        (WebKit::FrameLoaderClientImpl::userAgent):